<resources>
    <string name="app_name">Tile Artist</string>

    <string name="game_palette_title">Choose a color</string>
    <string name="game_palette_ok">ok</string>
    <string name="game_palette_cancel">cancel</string>

    <string name="storage_permission_denied">Please allow access to storage to enable save/share feature.</string>
    <string name="camera_permission_denied">You have to allow camera permission in order to use this feature.</string>
    <string name="camera_no_cameras">Cannot access any of your\'s cameras :(</string>
    <string name="camera_post_image_size">Image size:</string>
    <string name="camera_post_amount_of_colors">Amount of colors:</string>
    <string name="camera_post_rotation">Rotation:</string>
    <string name="camera_post_ok_button">OK</string>
    <string name="camera_load_file_title">Select a file.</string>
    <string name="camera_load_file_error_launching_file_manager">Failed to launch any file manager. Please install one.</string>
    <string name="camera_load_file_fail">Failed to load your file.</string>
    <string name="game_dialog_save_sandbox_head_text">Save your masterpiece</string>
    <string name="game_dialog_save_sandbox_title">Title</string>
    <string name="game_dialog_save_sandbox_author">Author</string>
    <string name="game_dialog_save_sandbox_category">Category</string>
    <string name="game_dialog_save_sandbox_ok">Save</string>
    <string name="game_dialog_save_sandbox_cancel">Don\'t save</string>
    <string name="menu_title_images">Images</string>
    <string name="menu_title_sandbox">Sandbox</string>
    <string name="menu_title_multiplayer">Multiplayer</string>
    <string name="menu_title_account">Account</string>
    <string name="menu_title_settings">Settings</string>
    <string name="menu_dialog_continue_image_title">Do you want to continue drawing or start over?</string>
    <string name="menu_dialog_continue_image_ok">Continue drawing</string>
    <string name="menu_dialog_continue_image_cancel">Start over</string>
    <string name="menu_dialog_image_menu_1">Continue drawing</string>
    <string name="menu_dialog_image_menu_2">Start over</string>
    <string name="menu_dialog_image_menu_3">Delete</string>
    <string name="menu_dialog_image_confirmation_start_over_title">Do you really want to start over?</string>
    <string name="menu_dialog_image_confirmation_delete_title">Do you really want to delete this image?</string>
    <string name="menu_dialog_image_confirmation_delete_msg">Note: if you didn\'t unfollow this masterpiece\'s author, this image will be delivered to You after next synchronization.</string>
    <string name="menu_dialog_image_confirmation_ok">Yes</string>
    <string name="menu_dialog_image_confirmation_cancel">No</string>
    <string name="menu_dialog_sandbox_confirmation_delete_title">Do you really want to delete this image?</string>
    <string name="menu_dialog_sandbox_confirmation_ok">Yes</string>
    <string name="menu_dialog_sandbox_confirmation_cancel">No</string>
    <string name="menu_dialog_sandbox_menu_1">Open</string>
    <string name="menu_dialog_sandbox_menu_2">Add to your profile</string>
    <string name="menu_dialog_sandbox_menu_3">Save as image</string>
    <string name="menu_dialog_sandbox_menu_4">Share</string>
    <string name="menu_dialog_sandbox_menu_5">Delete</string>
    <string name="menu_dialog_sandbox_share_title">Share image</string>
    <string name="menu_dialog_sandbox_savedMsg">File saved to sd card.</string>
    <string name="menu_dialog_sandbox_success">Added yours Masterpiece successfully.</string>
    <string name="menu_dialog_profile_image_menu_1">Delete</string>
    <string name="menu_dialog_profile_image_confirmation_delete_title">Do you want to delete this masterpiece from your profile?</string>
    <string name="menu_dialog_profile_image_confirmation_delete_ok">Yes</string>
    <string name="menu_dialog_profile_image_confirmation_delete_cancel">No</string>
    <string name="feature_not_avaible_yet">This feature will be added in the next update.</string>
    <string name="account_username">Username</string>
    <string name="account_password">Password</string>
    <string name="account_password2">Retype password</string>
    <string name="account_login">Login</string>
    <string name="account_register">Register</string>
    <string name="account_login_title">Login to your account</string>
    <string name="account_register_title">Create new account</string>
    <string name="account_register_password_missmatch">You typed in 2 different passwords!</string>
    <string name="account_empty_username">Username is empty!</string>
    <string name="account_empty_password">Password is empty!</string>
    <string name="account_success_login">Successfully logged in.</string>
    <string name="account_success_register">Registered successfully. Now you can login to your account.</string>
    <string name="account_continue_without">Continue without account</string>
    <string name="account_dialog_continue_without_title">Do you want to continue without creating an account?</string>
    <string name="account_dialog_continue_without_message">If you proceed, anyone will be able to sign their Masterpiece using your Username.</string>
    <string name="account_dialog_continue_without_ok">Continue without one</string>
    <string name="account_dialog_continue_without_cancel">Create one</string>
    <string name="account_logout">Logout</string>
    <string name="account_find_friends_et_hint">Find other artists...</string>
    <string name="multiplayer_helpText1">Type in your opponent\'s nickname:</string>
    <string name="multiplayer_helpText2">Select image:</string>
    <string name="multiplayer_create">Create a game.</string>
    <string name="multiplayer_start">Let\'s go!</string>
    <string name="multiplayer_dialog_finished_title">Finished!</string>
    <string name="multiplayer_dialog_finished_mesg">Your time: %t. Go back to menu to check if your opponent has already finished.</string>
    <string name="multiplayer_dialog_finished_ok">OK</string>
    <string name="multiplayer_game_entry_dialog_button_start">Start</string>
    <string name="settings_options_game_title">Game opions</string>
    <string name="settings_option_1">Hold and swipe to draw faster</string>
    <string name="settings_option_2">Open images nicely zoomed out</string>
    <string name="settings_option_3">Show numbers on tiles</string>
    <string name="settings_option_4">In sandbox mode add tiles endlessly</string>
    <string name="settings_option_5">Autosave sandboxes on exit</string>
    <string name="settings_option_6">Enable fullscreen</string>
    <string name="settings_options_account_title">Account opions</string>
    <string name="settings_options_account_email">Email</string>
    <string name="settings_options_account_new_password">Set new password</string>
    <string name="settings_options_account_new_password2">Retype new password</string>
    <string name="settings_options_account_set_button">Set</string>
    <string name="settings_options_account_set_error_password2_empty">Please retype password.</string>
    <string name="settings_options_account_set_error_passwords_doesnt_match">Passwords doesn\'t match</string>
    <string name="settings_options_account_set_success_email">Email successfully updated!</string>
    <string name="settings_options_account_set_success_password">Password successfully updated!</string>
    <string name="settings_show_privacy_policy">Read privacy policy</string>

    <string name="networking_default_error">UnknownError (check internet connection)</string>
    <string name="networking_network_unreachable">Please check your internet connection.</string>

</resources>
